fix(nodeAndView): returns an incorrect top value when the page has a scrollbar

--- a/examples/document-editor.css
+++ b/examples/document-editor.css
@@ -5,7 +5,7 @@
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 2;
+  z-index: 3;
 }
 .document .lake-editor {
   box-sizing: border-box;
@@ -22,7 +22,7 @@
   background-color: #fff;
   border-left: none;
   border-right: none;
-  z-index: 1;
+  z-index: 2;
 }
 .document .lake-editor .lake-root {
   height: auto;
